tests/list_unclosed_right.ast.err
Error: Unclosed delimiter ( while parsing list
   ╭─[tests/list_unclosed_right.scm:1:6]
   │
 1 │ (3132
   · ┬    ┬  
   · ╰─────── Unclosed delimiter (
   ·      │  
   ·      ╰── Must be closed before this end of file
───╯
Error: Unexpected end of input while parsing list, expected (, )
   ╭─[tests/list_unclosed_right.scm:1:6]
   │
 1 │ (3132
   ·      ┬  
   ·      ╰── Unexpected end of file
───╯
